Fix: Post headlines are covered by navigation bar when "jump to" link is used (#124)

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -836,6 +836,11 @@ make sure this only happens on large viewports / desktop-ish devices.
   min-width: 100%;
 }
 
+.post-full-content h2:target,
+.post-full-content h3:target {
+  scroll-margin-top: calc(var(--header-height) + .5em);
+}
+
 .post-full-content li {
   word-break: break-word;
 }
